# embedded-rust-template

./: Cargo.toml  openocd.gdb
.cargo/: config
examples/: blinky_timer.rs
src/: main.rs
