[package]
authors = ["7h3qu1rkyb1t"]
edition = "2018"
readme = "README.md"
name = "rtic"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "*"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
cortex-m-rtic ={git = "https://github.com/rtic-rs/cortex-m-rtic"}
volatile-register = "*"
# stm32f7 = { version = "0.12.1", features = ["stm32f7x7"] }

[dependencies.stm32f7xx-hal] 
version = "0.2.0"
features = ["stm32f767", "rt"]
# path = "/home/gireesh/gits/stm32f7xx-hal"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "rtic"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
